<resources>
    <string name="app_name">DDG</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="more">More</string>

    <string name="PermissionGranted">Permission granted</string>
    <string name="PermissionDenied">Permission denied</string>
    <string name="makeUp">Makeup</string>
    <string name="perfumes">Perfumes</string>
    <string name="skinCare">Skin care</string>
    <string name="hair">Hair</string>
    <string name="makeUpSubTitle">lipstick,Foundatio, \n Eyeliner</string>
    <string name="perfumesSubTitle">Perfume, badysplash, \n Eau de toilet,</string>
    <string name="skinCareSubTitle"><![CDATA[Cleanser, BB&CC Cream, \n Masks & scrubs]]></string>
    <string name="hairSubTitle">Shampoo, Conditioner, \n HairTratments</string>
    <string name="myActivity">My activity</string>
    <string name="historyScan">History scan</string>
    <string name="other">Other</string>
    <string name="aboutUs">About Us</string>
    <string name="setting">Settings</string>
    <string name="contactUs">Contact Us</string>
    <string name="shareApp">Share App</string>
    <string name="rateApp">Rate the App</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="appLanguage">Languages</string>
    <string name="whoWeAre">Who We Are?</string>
    <string name="whoWeAreSubTitle">DDG is a non business project , It is considered as student  graduation project  based on a bar code tool authentication for  specific
    products such as make up , perfumes , skin and hair care  products to be checked if it is original or fake and report  for the fake and useful for limitation the Commercial Fraud.    \n \n

Created by :\n Dana AlQattan.\n Dalal Alhuwaidi. \n Ghazwah Almutairi.    \n \n
Presented To : \n Dr. Ahmed Al Mazyad</string>
    <string name="OriginalProduct">Original Product</string>
    <string name="successDetials">This product is a original product from the manufacturerYou can know more details if you pressing on the product details</string>
    <string name="productDetails">Product details</string>
    <string name="rescan">Rescan</string>
    <string name="callUs">Call us</string>
    <string name="send">Send</string>

    <string name="messageText">Message text...</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="Email">Email</string>
    <!--- - - - - - - - - validation - - - - - - - - - - - - -  -->

    <string name="EnterPass">Enter the password</string>
    <string name="invalidPass">Invalid password</string>

    <string name="passConfirm">Enter confirm password</string>
    <string name="passMatchat">Password not matching</string>
    <string name="EnterNamge">Enter Your  userName</string>
    <string name="enterFirstName">Enter Your First Name</string>


    <string name="enterLastName">Enter Your Last Name</string>

    <string name="shortName">The name is too short</string>
    <string name="EnterNumber">Enter your phone number</string>
    <string name="invalidNumber">Invalid phone number</string>
    <string name="EnterEmail">Enter the email address</string>
    <string name="invalidEmail">Please enter a valid email</string>

    <string name="invalidName">Invalid User Name</string>
    <string name="empity">Please enter data</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">Network is not enapled! want to go to setting menu?</string>
    <string name="open_location_settings">open location settings</string>

    <!--- - - - - - - - - - - - - - - - - - - - - - -  -->


    <string name="no">no</string>
    <string name="yes">yes</string>

    <string name="enterMapAddress">Enter the address, city, or postal code</string>
    <string name="add">Add</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="productInfo">Product Info</string>
    <string name="addPhoto">Add photo</string>
    <string name="productPhotos">Products Photos</string>
    <string name="productName">ProductName</string>
    <string name="productBarCode">Product barcode</string>
    <string name="productDescription">Product description</string>
    <string name="storeInfo">Store info</string>
    <string name="storeName">Store name</string>
    <string name="location">Location</string>
    <string name="storeDescription">Store description</string>
    <string name="sendReport">Send report</string>
    <string name="reportProducts">Report product</string>

</resources>
